--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -42,21 +42,14 @@
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="94dp"
-        android:layout_marginEnd="24dp"
         android:text="Log out"
-        app:layout_constraintEnd_toEndOf="@+id/startExerciseButton"
-        app:layout_constraintTop_toTopOf="@+id/startExerciseButton" />
-
-    <Button
-        android:id="@+id/dmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:text="Message"
-        app:layout_constraintBottom_toTopOf="@+id/startExerciseButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imageView"
+        app:layout_constraintVertical_bias="0.222" />
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -75,10 +68,12 @@
         android:id="@+id/button_friends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginBottom="30dp"
         android:text="Friends"
-        app:layout_constraintTop_toBottomOf="@+id/logoutButton"
-        tools:layout_editor_absoluteX="160dp" />
+        app:layout_constraintBottom_toTopOf="@+id/startExerciseButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
