--- a/MyApplication/app/src/main/res/layout/activity_register.xml
+++ b/MyApplication/app/src/main/res/layout/activity_register.xml
@@ -4,20 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:gravity="center_horizontal">
+    android:gravity="center">
 
 
     <EditText
         android:id="@+id/editTextUserName"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="username"
+        android:hint="Username"
         android:inputType="text"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        />
 
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -25,7 +26,7 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Password"
         android:inputType="textPassword"
@@ -33,8 +34,8 @@
 
     <Button
         android:id="@+id/buttonRegister"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="126dp"
         android:text="Register"
         android:textColor="@color/white"/>
 </LinearLayout>
