--- a/MyApplication/app/src/main/res/layout/activity_welcome.xml
+++ b/MyApplication/app/src/main/res/layout/activity_welcome.xml
@@ -14,10 +14,10 @@
 
     <Button
         android:id="@+id/btnLetsGo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:text="Let's go"
         android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="80dp" />
+        android:layout_marginBottom="200dp" />
 </FrameLayout>
 
