--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -69,4 +69,14 @@
         android:layout_marginBottom="100dp"
         />
 
+    <Button
+        android:id="@+id/buttonAutoLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Auto Login (Test ONLY)"
+        app:layout_constraintTop_toBottomOf="@id/buttonCreateAccount"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
