--- a/MyApplication/app/src/main/res/layout/activity_chat.xml
+++ b/MyApplication/app/src/main/res/layout/activity_chat.xml
@@ -79,6 +79,8 @@
         android:clipToPadding="false"
         android:orientation="vertical"
         android:overScrollMode="never"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:padding="20dp"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
