--- a/MyApplication/app/src/main/res/layout/user_container.xml
+++ b/MyApplication/app/src/main/res/layout/user_container.xml
@@ -10,6 +10,7 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:scaleType="centerCrop"
+        android:src="@drawable/profile_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
