--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,11 +10,14 @@
     android:orientation="vertical"
     tools:context=".activity.UserProfileActivity">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_image_view"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:background="@drawable/circular_bg"
+        app:shapeAppearanceOverlay="@style/circular"
+        app:strokeWidth="5dp"
+        app:strokeColor="@color/black"
+        android:padding="5dp"
         android:backgroundTint="@color/my_primary"
         android:scaleType="centerCrop"
         android:src="@drawable/person_icon" />
