--- a/MyApplication/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/MyApplication/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search"
-        android:title="Search" />
+        android:title="@string/search" />
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile" />
+        android:title="@string/profile" />
     <item
         android:id="@+id/navigation_friends"
         android:icon="@drawable/ic_friends"
-        android:title="Friends" />
+        android:title="@string/friends" />
     <item
         android:id="@+id/navigation_sports"
         android:icon="@drawable/ic_sports"
-        android:title="Sports" />
+        android:title="@string/sports" />
 </menu>
