--- a/MyApplication/app/src/main/res/layout/activity_register.xml
+++ b/MyApplication/app/src/main/res/layout/activity_register.xml
@@ -37,23 +37,23 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Gender"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:layout_marginBottom="20dp"/>
 
     <EditText
         android:id="@+id/editTextWeight"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="Weight"
-        android:inputType="textPassword"
+        android:hint="Weight(kg)"
+        android:inputType="text"
         android:layout_marginBottom="20dp"/>
 
     <EditText
         android:id="@+id/editTextHeight"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="Height"
-        android:inputType="textPassword"
+        android:hint="Height(cm)"
+        android:inputType="text"
         android:layout_marginBottom="20dp"/>
 
     <Button
