--- a/MyApplication/app/src/main/res/layout/activity_user_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_user_profile.xml
@@ -29,7 +29,8 @@
         android:elevation="5dp"
         android:hint="Username"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/useremail"
@@ -38,7 +39,8 @@
         android:elevation="5dp"
         android:hint="Useremail"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/usergender"
@@ -47,7 +49,8 @@
         android:elevation="5dp"
         android:hint="Usergender"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/userweight"
@@ -56,7 +59,8 @@
         android:elevation="5dp"
         android:hint="Userweight"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/userheight"
@@ -65,11 +69,12 @@
         android:elevation="5dp"
         android:hint="Userheight"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/uploadImageButton"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="Upload picture" />
 
