--- a/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
+++ b/MyApplication/app/src/main/res/layout/activity_friend_profile.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activity.UserProfileActivity">
+    tools:context=".activity.FriendProfileActivity">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_image_view"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:background="@drawable/circular_bg"
+        app:shapeAppearanceOverlay="@style/circular"
+        app:strokeWidth="5dp"
+        app:strokeColor="@color/black"
+        android:padding="5dp"
         android:backgroundTint="@color/my_primary"
         android:scaleType="centerCrop"
         android:src="@drawable/person_icon" />
@@ -25,7 +29,8 @@
         android:elevation="5dp"
         android:hint="Username"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/useremail"
@@ -34,7 +39,8 @@
         android:elevation="5dp"
         android:hint="Useremail"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/usergender"
@@ -43,7 +49,8 @@
         android:elevation="5dp"
         android:hint="Usergender"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/userweight"
@@ -52,7 +59,8 @@
         android:elevation="5dp"
         android:hint="Userweight"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/userheight"
@@ -61,7 +69,8 @@
         android:elevation="5dp"
         android:hint="Userheight"
         android:inputType="text"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/blockUserButton"
