--- a/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
+++ b/MyApplication/app/src/main/res/layout/activity_exercise_record.xml
@@ -20,19 +20,20 @@
             android:id="@+id/SortByDateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date" />
+            android:text=" Date"
+            android:drawableRight="@drawable/ic_sort_descending"/>
 
         <Button
             android:id="@+id/SortByDistanceButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Distance" />
+            android:text=" Distance" />
 
         <Button
             android:id="@+id/SortByDurationButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Duration" />
+            android:text=" Duration" />
 
 
 
