--- a/MyApplication/app/src/main/res/layout/activity_friend_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_friend_list.xml
@@ -37,17 +37,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View Blacklist"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageBack" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/blacklistButton">
+        app:layout_constraintTop_toBottomOf="@id/imageBack">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/userRecyclerView"
@@ -75,4 +75,3 @@
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
