--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -3,5 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple_500">#FF6200EE</color>
+    <color name="purple">#51247a</color>
+    <color name="Microsoftblue">#09A4DB</color>
+    <color name="Grey">#E7E5EA</color>
+    <color name="Button">#6650a5</color>
+    <color name="Notice">#F7AD19</color>
     <color name="my_primary">#33B5FF</color>
 </resources>
